# mikubot

./: .gitignore  CMakeLists.txt
mikubot/: CMakeLists.txt
mikubot/include/: client.hpp  mikubot.hpp
mikubot/include/command/: command.hpp  commandregistry.hpp  option.hpp
mikubot/include/module/: help.hpp  module.hpp  modulemanager.hpp  voice.hpp
mikubot/include/util/: num.hpp
mikubot/src/: client.cpp  main.cpp  mikubot.cpp
mikubot/src/command/: command.cpp  commandregistry.cpp  option.cpp
mikubot/src/module/: help.cpp  module.cpp  modulemanager.cpp  storage.cpp  voice.cpp
mikubot/src/util/: num.cpp
mikuserver/: CMakeLists.txt
mikuserver/include/: mikuserver.hpp  resource.hpp  response.hpp
mikuserver/include/system/: system.hpp  systemmanager.hpp
mikuserver/src/: main.cpp  mikuserver.cpp
mikuserver/src/system/: storage.cpp  system.cpp  systemmanager.cpp
